--- a/main.css
+++ b/main.css
@@ -19,6 +19,7 @@ header {
   width: 100%;
   height: 20vh;
   display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
@@ -27,6 +28,13 @@ h1 {
   font-size: 2.25rem;
   color: #FFFFFF;
   margin-left: 50px;
+}
+
+h2 {
+  font-family: 'Fredericka the Great', cursive;
+  font-size: 2.25rem;
+  color: #FFFFFF;
+  margin: 0;
 }
 
 .blue-line {
@@ -39,8 +47,14 @@ h1 {
   height: 10px;
 }
 
-main p {
-  margin: 30px 0 0 50px;
+#main-section {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+}
+
+#main-section #p1 {
+  margin-left: 50px;
 }
 
 footer {
@@ -61,15 +75,29 @@ footer p {
 }
 
 
-@media (max-width: 500px) {
+/**** MEDIA QUERY FOR MOBILE - MAX-WIDTH 650 ****/
+
+@media (max-width: 650px) {
   header {
+    flex-direction: column;
     justify-content: center;
   }
-  h1 {
+}
+
+/**** MEDIA QUERY FOR MOBILE - MAX-WIDTH 500 ****/
+
+@media (max-width: 500px) {
+  h1, h2 {
     margin: 0;
     font-size: 1.5rem;
   }
-  main p {
-    margin: 30px 0 0 0;
-    text-align: center;
+  #main-section {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  #main-section #p1 {
+    margin: 0;
+  }
 }
